--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
+    "@vercel/analytics": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
